--- a/angular.json
+++ b/angular.json
@@ -115,6 +115,12 @@
           }
         }
       }
-    }},
-  "defaultProject": "gigrum-app"
+    }
+  },
+  "defaultProject": "gigrum-app",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
