--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.1.2",
     "@angular/material": "^8.2.1",
     "@angular/platform-browser": "~8.1.2",
@@ -23,6 +24,8 @@
     "@angular/router": "~8.1.2",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "angularx-social-login": "^1.2.7",
+    "firebase": "^7.0.0",
     "hammerjs": "^2.0.8",
     "localize-router": "^2.0.0-RC.3",
     "localize-router-http-loader": "^1.0.2",
