--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "hammerjs": "^2.0.8",
     "localize-router": "^2.0.0-RC.3",
     "localize-router-http-loader": "^1.0.2",
+    "ng2-ckeditor": "^1.2.6",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
