--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "angularx-social-login": "^1.2.7",
+    "class-transformer": "^0.2.3",
     "firebase": "^7.0.0",
     "hammerjs": "^2.0.8",
     "localize-router": "^2.0.0-RC.3",
     "localize-router-http-loader": "^1.0.2",
     "ng2-ckeditor": "^1.2.6",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
