--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
             ],
             "styles": [
               "src/custom-theme.scss",
+              "src/assets/icoMoon/style.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -85,7 +86,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/icoMoon/style.css"
             ],
             "scripts": []
           }
