--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "localize-router": "^2.0.0-RC.3",
     "localize-router-http-loader": "^1.0.2",
     "ng2-ckeditor": "^1.2.6",
+    "ngx-take-until-destroy": "^5.4.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
