--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "highlightjs": "^9.12.0",
     "localize-router": "^2.0.0-RC.3",
     "localize-router-http-loader": "^1.0.2",
+    "ng-knife": "^0.2.8",
     "ng2-ckeditor": "^1.2.6",
+    "ngx-mask": "^8.1.6",
     "ngx-quill": "^7.3.9",
     "ngx-take-until-destroy": "^5.4.0",
     "quill": "^1.3.7",
