--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
               "./node_modules/quill/dist/quill.core.css",
               "./node_modules/quill/dist/quill.bubble.css",
               "./node_modules/quill/dist/quill.snow.css",
+              "./node_modules/font-awesome/css/font-awesome.css",
               "src/styles.css"
             ],
             "scripts": ["./node_modules/quill/dist/quill.min.js"]
@@ -91,7 +92,8 @@
             "styles": [
               "src/styles.css",
               "src/assets/icoMoon/style.css",
-              "./node_modules/quill/dist/quill.core.css"
+              "./node_modules/quill/dist/quill.core.css",
+              "./node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": []
           }
