--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "angularx-social-login": "^1.2.7",
     "class-transformer": "^0.2.3",
     "firebase": "^7.2.3",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "highlightjs": "^9.12.0",
     "localize-router": "^2.0.0-RC.3",
     "localize-router-http-loader": "^1.0.2",
     "ng2-ckeditor": "^1.2.6",
+    "ngx-gallery": "^5.10.0",
     "ngx-quill": "^7.3.9",
     "ngx-take-until-destroy": "^5.4.0",
     "quill": "^1.3.7",
