--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "ng-knife": "^0.2.8",
     "ng2-ckeditor": "^1.2.6",
     "ngx-mask": "^8.1.6",
-    "ngx-quill": "^7.3.9",
+    "ngx-quill": "7.3.2",
     "ngx-take-until-destroy": "^5.4.0",
     "quill": "^1.3.7",
     "reflect-metadata": "^0.1.13",
