--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ng-knife": "^0.2.8",
     "ng2-ckeditor": "^1.2.6",
     "ngx-mask": "^8.1.6",
+    "ngx-gallery": "^5.10.0",
     "ngx-quill": "7.3.2",
     "ngx-take-until-destroy": "^5.4.0",
     "quill": "^1.3.7",
