--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@types/jquery": "^3.3.31",
     "angular-highlight-js": "^2.0.1",
     "angularx-social-login": "^1.2.7",
     "class-transformer": "^0.2.3",
@@ -35,12 +36,13 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "highlightjs": "^9.12.0",
+    "jquery": "^3.4.1",
     "localize-router": "^2.0.0-RC.3",
     "localize-router-http-loader": "^1.0.2",
     "ng-knife": "^0.2.8",
     "ng2-ckeditor": "^1.2.6",
-    "ngx-mask": "^8.1.6",
     "ngx-gallery": "^5.10.0",
+    "ngx-mask": "^8.1.6",
     "ngx-quill": "7.3.2",
     "ngx-take-until-destroy": "^5.4.0",
     "quill": "^1.3.7",
