--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "angular-highlight-js": "^2.0.1",
+    "angular2-click-outside": "^0.1.0",
     "angularx-social-login": "^1.2.7",
     "class-transformer": "^0.2.3",
     "firebase": "^7.2.3",
@@ -36,6 +37,7 @@
     "highlightjs": "^9.12.0",
     "localize-router": "^2.0.0-RC.3",
     "localize-router-http-loader": "^1.0.2",
+    "ng-click-outside": "^5.1.1",
     "ng-knife": "^0.2.8",
     "ng2-ckeditor": "^1.2.6",
     "ngx-mask": "^8.1.6",
