--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ngx-gallery": "^5.10.0",
     "ngx-mask": "^8.1.6",
     "ngx-quill": "7.3.2",
+    "ngx-socket-io": "^3.0.1",
     "ngx-take-until-destroy": "^5.4.0",
     "quill": "^1.3.7",
     "reflect-metadata": "^0.1.13",
