--- a/angular.json
+++ b/angular.json
@@ -30,9 +30,12 @@
               "./node_modules/quill/dist/quill.bubble.css",
               "./node_modules/quill/dist/quill.snow.css",
               "./node_modules/font-awesome/css/font-awesome.css",
+              "./node_modules/@ctrl/ngx-emoji-mart/picker.css",
               "src/styles.css"
             ],
-            "scripts": ["./node_modules/quill/dist/quill.min.js"]
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/quill/dist/quill.min.js"]
           },
           "configurations": {
             "production": {
