--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "quill": "^1.3.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.4.0",
+    "socket.io": "^2.3.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
