--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.2",
-    "@angular/cdk": "~8.2.1",
+    "@angular-mdc/web": "^3.2.1",
+    "@angular/animations": "^8.1.3",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
     "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.1.2",
-    "@angular/material": "^8.2.1",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
@@ -65,9 +66,6 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
-    "css-loader": "^3.4.0",
-    "extract-loader": "^3.1.0",
-    "file-loader": "^5.0.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -75,9 +73,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "node-sass": "^4.13.0",
     "protractor": "~5.4.0",
-    "sass-loader": "^8.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
