--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
-    "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.1.2",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.1.2",
@@ -39,7 +38,6 @@
     "angularx-social-login": "^1.2.7",
     "class-transformer": "^0.2.3",
     "date-fns": "^2.9.0",
-    "firebase": "^7.2.3",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "highlightjs": "^9.12.0",
@@ -62,7 +60,7 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.2",
+    "@angular-devkit/build-angular": "^0.803.23",
     "@angular/cli": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
