--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "@angular/router": "~8.1.2",
     "@ctrl/ngx-emoji-mart": "^1.0.5",
     "@fortawesome/angular-fontawesome": "^0.5.0",
-    "@material/select": "^4.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-regular-svg-icons": "^5.5.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@material/select": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
@@ -41,6 +41,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "highlightjs": "^9.12.0",
+    "howler": "^2.1.3",
     "jquery": "^3.4.1",
     "localize-router": "^2.0.0-RC.3",
     "localize-router-http-loader": "^1.0.2",
