--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "@nicky-lenaers/ngx-scroll-to": "^3.0.1",
     "@types/jquery": "^3.3.31",
+    "angular-calendar": "^0.28.2",
     "angular-highlight-js": "^2.0.1",
     "angular2-click-outside": "^0.1.0",
     "angularx-social-login": "^1.2.7",
@@ -45,6 +46,7 @@
     "jquery": "^3.4.1",
     "localize-router": "^2.0.0-RC.3",
     "localize-router-http-loader": "^1.0.2",
+    "moment": "^2.24.0",
     "ng-click-outside": "^5.1.1",
     "ng-knife": "^0.2.8",
     "ng2-ckeditor": "^1.2.6",
