--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "angular-highlight-js": "^2.0.1",
     "angular2-click-outside": "^0.1.0",
     "angularx-social-login": "^1.2.7",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-annotation": "^0.5.7",
     "class-transformer": "^0.2.3",
     "date-fns": "^2.9.0",
     "font-awesome": "^4.7.0",
@@ -49,6 +51,7 @@
     "moment": "^2.24.0",
     "ng-click-outside": "^5.1.1",
     "ng-knife": "^0.2.8",
+    "ng2-charts": "^2.3.0",
     "ng2-ckeditor": "^1.2.6",
     "ngx-gallery": "^5.10.0",
     "ngx-mask": "^8.1.6",
