--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "dependencies": {
     "@angular-mdc/web": "^3.2.1",
     "@angular/animations": "^9.0.0",
-    "@angular/cdk": "^8.2.3",
+    "@angular/cdk": "^9.0.0",
     "@angular/common": "~9.0.0",
     "@angular/compiler": "~9.0.0",
     "@angular/core": "~9.0.0",
     "@angular/forms": "~9.0.0",
-    "@angular/material": "^8.2.3",
+    "@angular/localize": "^9.0.0",
+    "@angular/material": "^9.0.0",
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
@@ -41,7 +42,6 @@
     "class-transformer": "^0.2.3",
     "date-fns": "^2.9.0",
     "font-awesome": "^4.7.0",
-    "hammerjs": "^2.0.8",
     "highlightjs": "^9.16.2",
     "howler": "^2.1.3",
     "jquery": "^3.4.1",
