--- a/package.json
+++ b/package.json
@@ -12,77 +12,78 @@
   "private": true,
   "dependencies": {
     "@angular-mdc/web": "^3.2.1",
-    "@angular/animations": "^9.0.0",
-    "@angular/cdk": "^9.0.0",
-    "@angular/common": "~9.0.0",
-    "@angular/compiler": "~9.0.0",
-    "@angular/core": "~9.0.0",
-    "@angular/forms": "~9.0.0",
-    "@angular/localize": "^9.0.0",
-    "@angular/material": "^9.0.0",
-    "@angular/platform-browser": "~9.0.0",
-    "@angular/platform-browser-dynamic": "~9.0.0",
-    "@angular/router": "~9.0.0",
-    "@ctrl/ngx-emoji-mart": "^1.0.6",
+    "@angular/animations": "^8.1.3",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "~8.1.2",
+    "@angular/compiler": "~8.1.2",
+    "@angular/core": "~8.1.2",
+    "@angular/forms": "~8.1.2",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "~8.1.2",
+    "@angular/platform-browser-dynamic": "~8.1.2",
+    "@angular/router": "~8.1.2",
+    "@ctrl/ngx-emoji-mart": "^1.0.5",
     "@fortawesome/angular-fontawesome": "^0.5.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.27",
-    "@fortawesome/free-regular-svg-icons": "^5.12.1",
-    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-regular-svg-icons": "^5.5.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@material/select": "^4.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^5.2.2",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@nicky-lenaers/ngx-scroll-to": "^3.0.1",
-    "@types/jquery": "^3.3.32",
+    "@types/jquery": "^3.3.31",
     "angular-calendar": "^0.28.2",
     "angular-highlight-js": "^2.0.1",
     "angular2-click-outside": "^0.1.0",
+    "angularx-social-login": "^1.2.7",
     "chart.js": "^2.9.3",
     "chartjs-plugin-annotation": "^0.5.7",
     "class-transformer": "^0.2.3",
     "date-fns": "^2.9.0",
     "font-awesome": "^4.7.0",
-    "highlightjs": "^9.16.2",
+    "hammerjs": "^2.0.8",
+    "highlightjs": "^9.12.0",
     "howler": "^2.1.3",
     "jquery": "^3.4.1",
     "localize-router": "^2.0.0-RC.3",
     "localize-router-http-loader": "^1.0.2",
     "moment": "^2.24.0",
-    "ng-click-outside": "^5.3.0",
+    "ng-click-outside": "^5.1.1",
     "ng-knife": "^0.2.8",
     "ng2-charts": "^2.3.0",
     "ng2-ckeditor": "^1.2.6",
     "ngx-gallery": "^5.10.0",
-    "ngx-mask": "^8.1.7",
+    "ngx-mask": "^8.1.6",
     "ngx-quill": "7.3.2",
     "ngx-socket-io": "^3.0.1",
     "ngx-take-until-destroy": "^5.4.0",
     "quill": "^1.3.7",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "~6.5.4",
+    "rxjs": "~6.4.0",
     "socket.io": "^2.3.0",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "tslib": "^1.9.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.1",
-    "@angular/cli": "~9.0.1",
-    "@angular/compiler-cli": "~9.0.0",
-    "@angular/language-service": "~9.0.0",
+    "@angular-devkit/build-angular": "^0.803.23",
+    "@angular/cli": "~8.1.2",
+    "@angular/compiler-cli": "~8.1.2",
+    "@angular/language-service": "~8.1.2",
     "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.2",
-    "protractor": "^5.4.3",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.7.5"
+    "typescript": "~3.4.3"
   }
 }
