--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "highlightjs": "^9.12.0",
     "howler": "^2.1.3",
     "jquery": "^3.4.1",
+    "jquery-datepicker": "^1.12.3",
     "localize-router": "^2.0.0-RC.3",
     "localize-router-http-loader": "^1.0.2",
     "moment": "^2.24.0",
