--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "@nicky-lenaers/ngx-scroll-to": "^3.0.1",
     "@types/jquery": "^3.3.31",
+    "@types/jquery.ui.datetimepicker": "^0.3.29",
+    "angular-bootstrap-datetimepicker": "^4.0.2",
     "angular-calendar": "^0.28.2",
     "angular-highlight-js": "^2.0.1",
     "angular2-click-outside": "^0.1.0",
     "angularx-social-login": "^1.2.7",
+    "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "chartjs-plugin-annotation": "^0.5.7",
     "class-transformer": "^0.2.3",
@@ -46,7 +49,6 @@
     "highlightjs": "^9.12.0",
     "howler": "^2.1.3",
     "jquery": "^3.4.1",
-    "jquery-datepicker": "^1.12.3",
     "localize-router": "^2.0.0-RC.3",
     "localize-router-http-loader": "^1.0.2",
     "moment": "^2.24.0",
@@ -59,6 +61,7 @@
     "ngx-quill": "7.3.2",
     "ngx-socket-io": "^3.0.1",
     "ngx-take-until-destroy": "^5.4.0",
+    "open-iconic": "^1.1.1",
     "quill": "^1.3.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.4.0",
@@ -77,7 +80,7 @@
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
