--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "ng-knife": "^0.2.8",
     "ng2-charts": "^2.3.0",
     "ng2-ckeditor": "^1.2.6",
+    "ng2-validation": "^4.2.0",
     "ngx-gallery": "^5.10.0",
     "ngx-mask": "^8.1.6",
     "ngx-quill": "7.3.2",
