--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jquery": "^3.4.1",
     "localize-router": "^2.0.0-RC.3",
     "localize-router-http-loader": "^1.0.2",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "ng-click-outside": "^5.1.1",
     "ng-knife": "^0.2.8",
