--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "^0.803.23",
-        "@angular/cli": "~8.1.2",
+        "@angular/cli": "^8.1.3",
         "@angular/compiler-cli": "~8.1.2",
         "@angular/language-service": "~8.1.2",
         "@types/jasmine": "~3.3.8",
