--- a/angular.json
+++ b/angular.json
@@ -32,11 +32,14 @@
               "./node_modules/quill/dist/quill.snow.css",
               "./node_modules/font-awesome/css/font-awesome.css",
               "./node_modules/@ctrl/ngx-emoji-mart/picker.css",
+              "./node_modules/slick-carousel/slick/slick.scss",
+              "./node_modules/slick-carousel/slick/slick-theme.scss",
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js",
-              "./node_modules/quill/dist/quill.min.js"
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/quill/dist/quill.min.js",
+              "node_modules/slick-carousel/slick/slick.min.js"
             ]
           },
           "configurations": {
