--- a/package.json
+++ b/package.json
@@ -62,12 +62,14 @@
         "ngx-gallery": "^5.10.0",
         "ngx-mask": "^8.1.6",
         "ngx-quill": "7.3.2",
+        "ngx-slick-carousel": "^0.5.1",
         "ngx-socket-io": "^3.0.1",
         "ngx-take-until-destroy": "^5.4.0",
         "open-iconic": "^1.1.1",
         "quill": "^1.3.7",
         "reflect-metadata": "^0.1.13",
         "rxjs": "~6.4.0",
+        "slick-carousel": "^1.8.1",
         "socket.io": "^2.3.0",
         "tslib": "^1.9.0",
         "zone.js": "~0.9.1"
