--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
         "@angular/cli": "^8.1.3",
         "@angular/compiler-cli": "~8.1.2",
         "@angular/language-service": "~8.1.2",
+        "@types/hammerjs": "^2.0.36",
         "@types/jasmine": "~3.3.8",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.9.4",
